[package]
name = "whiskerWatchWeb"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.6", features = ["multipart"] }
axum-extra = { version = "0.10.1", features = ["cookie"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6.6", features = ["fs"] }
uuid = { version = "1.18.1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
urlencoding = "2"
bcrypt = "0.16"

[dev-dependencies]
serde_urlencoded = "0.7"
tempfile = "3"
