[package]
name = "whiskerWatchWeb"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
dotenvy = "0.15"
rand = "0.8"
axum = "0.8.6"
axum-extra = { version = "0.10.1", features = ["cookie"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
subtle = "2"
tokio = { version = "1.48.0", features = ["fs", "macros", "rt-multi-thread", "sync"] }
tower-http = { version = "0.6.6", features = ["fs"] }
uuid = { version = "1.18.1", features = ["v4"] }
